--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,92 @@ a {
     background-color: azure;
     color: black;
 }
+
+
+/* STYLES FOR ENVELOPE */
+.update {
+    background: #e3ebd1;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.envelope {
+    width: 300px;
+    height: 200px;
+    position: relative;
+    background: #267cec;
+    cursor: pointer;
+}
+
+.top-side {
+    border-bottom: 150px solid #267cec;
+    top: -150px;
+    transform-origin: bottom;
+    z-index: 6;
+    transform: rotateX(180deg);
+    transition: all 0.8s ease;
+    transition-delay: 0.6s;
+}
+
+.envelope .bottom-side {
+    border-bottom: 150px solid #224ea1;
+    /* come back and fix this */
+    position: absolute;
+    bottom: 0;
+    z-index: 4;
+}
+
+.top-side,
+.bottom-side {
+    border-left: 150px solid transparent;
+    border-right: 150px solid transparent;
+    position: relative;
+}
+
+.left-side {
+    border-left: 125px solid #2b59b8;
+    position: absolute;
+    left: 0;
+}
+
+.right-side {
+    border-right: 125px solid #2b59b8;
+    position: absolute;
+    right: 0;
+}
+
+.left-side,
+.right-side {
+    border-top: 100px solid transparent;
+    border-bottom: 100px solid transparent;
+    top: 0;
+    z-index: 4;
+}
+
+.contents {
+    width: 90%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 3;
+    transition: all 1s ease;
+}
+
+.contents p {
+    width: 100%;
+}
+
+.envelope:hover .top-side {
+    transform: rotate(0deg);
+    z-index: 3;
+    transition-delay: 0.3s;
+}
+
+.envelope:hover p {
+    top: -70%;
+    z-index: 3;
+    transition-delay: 0.6s;
+}
