--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 html {
@@ -63,23 +64,28 @@ a {
 
 /* STYLES FOR ENVELOPE */
 .update {
-    background: #e3ebd1;
-    height: 100vh;
+    background-image: linear-gradient(to bottom, #6cb5fa, #e69bcc);
+    min-height: 60vh;
+    /* padding: 20vh 0 20vh 0; */
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .envelope {
+    margin: 30vh 0 10vh 0;
     width: 300px;
     height: 200px;
     position: relative;
-    background: #267cec;
+    background: #e8bc1b;
     cursor: pointer;
+    transition: all 1s ease;
+
 }
 
 .top-side {
-    border-bottom: 150px solid #267cec;
+    border-bottom: 150px solid #e8bc1b;
     top: -150px;
     transform-origin: bottom;
     z-index: 6;
@@ -89,8 +95,7 @@ a {
 }
 
 .envelope .bottom-side {
-    border-bottom: 150px solid #224ea1;
-    /* come back and fix this */
+    border-bottom: 150px solid #a48308;
     position: absolute;
     bottom: 0;
     z-index: 4;
@@ -104,13 +109,13 @@ a {
 }
 
 .left-side {
-    border-left: 125px solid #2b59b8;
+    border-left: 125px solid #d6aa0c;
     position: absolute;
     left: 0;
 }
 
 .right-side {
-    border-right: 125px solid #2b59b8;
+    border-right: 125px solid #d6aa0c;
     position: absolute;
     right: 0;
 }
@@ -126,6 +131,8 @@ a {
 .contents {
     width: 90%;
     position: absolute;
+    background-color: rgb(251, 255, 239);
+    padding: 1em 0 8em 0;
     top: 0;
     left: 50%;
     transform: translate(-50%);
@@ -134,17 +141,46 @@ a {
 }
 
 .contents p {
+    opacity: 0;
     width: 100%;
+    transition: all 1s ease;
 }
 
-.envelope:hover .top-side {
+#announcement {
+    display: none;
+}
+
+#announcement:checked~.envelope {
+    transform: scale(1.1);
+    transition: all 1s ease;
+}
+
+
+
+#announcement:checked+.envelope .top-side {
     transform: rotate(0deg);
     z-index: 3;
-    transition-delay: 0.3s;
 }
 
-.envelope:hover p {
+#announcement:checked+.envelope p {
+    opacity: 100;
     top: -70%;
     z-index: 3;
-    transition-delay: 0.6s;
+}
+
+#announcement:checked~.contents {
+    translate: 0 -2em;
+    transition: all 1s ease;
+}
+
+.details {
+    font-size: 1.5em;
+    line-height: 2em;
+    opacity: 0;
+    transition: all 1s ease;
+}
+
+#announcement:checked~.details {
+    opacity: 100;
+    transition: all 1s 1.5s ease;
 }
