--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 
 html {
     min-height: 100vh;
-    /* height: 100%; */
     width: 100vw;
 }
 
@@ -17,52 +16,6 @@ li {
     padding: 0;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.aboveGround {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 40vh;
-    background-color: aliceblue;
-}
-
-.aboveGround img {
-    height: 12rem;
-}
-
-.belowGround {
-    min-height: 60vh;
-    background-color: brown;
-    color: grey;
-}
-
-.services {
-    margin: 0 auto;
-    width: 80vw;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.services a {
-    display: inline-block;
-    margin: 1em;
-    padding: 2em;
-    border: 3px grey solid;
-    border-radius: 30%;
-}
-
-.services a:hover {
-    background-color: azure;
-    color: black;
-}
-
-
-/* STYLES FOR ENVELOPE */
 .update {
     background-image: linear-gradient(to bottom, #6cb5fa, #e69bcc);
     min-height: 60vh;
@@ -86,10 +39,15 @@ a {
     background: #e8bc1b;
     cursor: pointer;
     transition: all 1s ease;
-    /* box-shadow: black .5em .5em .5em; */
-
 }
 
+.envelope:hover {
+    animation: wiggle 3s linear infinite;
+}
+
+#announcement:checked+.envelope:hover {
+    animation: none;
+}
 .top-side {
     border-bottom: 150px solid #e8bc1b;
     top: -150px;
@@ -97,7 +55,6 @@ a {
     z-index: 6;
     transform: rotateX(180deg);
     transition: all 0.8s 0.6s ease;
-    /* transition-delay: 0.6s; */
 }
 
 .envelope .bottom-side {
@@ -239,4 +196,30 @@ a {
 
 .photos img:nth-child(4) {
     rotate: -8deg;
+}
+
+.photos img:hover {
+    animation: wiggle 3s infinite;
+}
+
+@keyframes wiggle {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(-5deg);
+    }
+
+    50% {
+        transform: rotate(5deg);
+    }
+
+    75% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
